# OpenTrust

./: .env.example  .gitignore  .npmrc  .secretlintignore  README.md  SECURITY.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
__tests__/: api-contract.test.ts  artifact-extract.test.ts  auth-rate-limit.test.ts  db.test.ts  ingestion-state.test.ts  memory-entries.test.ts  search.test.ts  sql-runner.test.ts
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
components/: app-shell.tsx  app-sidebar.tsx  artifact-link.tsx  auth-controls.tsx  border-glow.tsx  chart-area-interactive.tsx  code-block.tsx  code-demo.tsx  command-palette.tsx  confirm-dialog.tsx  copy-button.tsx  data-table.tsx  demo-mode-banner.tsx  demo-mode-toggle.tsx  github-stars.tsx  json-editor.tsx  markdown-preview-with-modal.tsx  markdown-preview.tsx  onboarding-01.tsx  onboarding-04.tsx  onboarding-07.tsx  pii-safe.tsx  promote-button.tsx  quick-note-dialog.tsx  review-actions.tsx  runnable-sql.tsx  section-cards.tsx  shader-background.tsx  sidebar.tsx  site-header.tsx  theme-provider.tsx  theme-toggle.tsx  title-particles.tsx  url-preview.tsx
db/: 0001_init.sql
docs/: ARCHITECTURE.md  CONVEX-PRODUCT-SPEC.md  CONVEX-REPLACEMENT-BLUEPRINT.md  CRM-SCAFFOLDING-NOTES.md  CURATED-MEMORY-DESIGN.md  DESKTOP-APPLICATION-PLAN.md  DOCS-ALIGNMENT-NOTES.md  PHASES.md  (+15 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
(+154 files in other folders)
